--- a/utils/macbook.html
+++ b/utils/macbook.html
@@ -7,7 +7,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(135deg, #7117ea, #ea6060);
+    /* background-image: linear-gradient(135deg, #7117ea, #ea6060); */
+    background-color: #fff;
   }
 
   /* 宽 / 长 = 0.54 */
@@ -176,7 +177,7 @@
     z-index: 200;
     position: absolute;
     bottom: 0px;
-    right: -170px;
+    right: -220px;
   }
 
   /* 宽 / 长 = 0.7 */
@@ -191,7 +192,7 @@
     z-index: 100;
     position: absolute;
     bottom: 50px;
-    right: 90px;
+    right: 30px;
   }
 </style>
 
